# EduGlobe-Insights

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: 01_data_exploratory.ipynb  02_data_cleaning.ipynb  03_analysis.ipynb
src/project2/utils/: Cleaner.py  Config.py  DataInspector.py
